crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_js_worker__tests__Memory_trimmed_to_1_replay_6.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: "sanitize_json(&serde_json::to_value(&replay).unwrap())"
---
{
  "captured_writes": [
    {
      "Append": {
        "execution_id": "E_<REDACTED>",
        "version": 6,
        "req": {
          "created_at": "<TIMESTAMP>",
          "event": {
            "finished": {
              "retval": {
                "ok": {
                  "type": "result<string, string>",
                  "value": {
                    "ok": "\"hello\""
                  }
                }
              },
              "http_client_traces": null
            }
          }
        }
      }
    }
  ]
}
